--- a/doc/thesis/ack.tex
+++ b/doc/thesis/ack.tex
@@ -1,6 +1,16 @@
 \thispagestyle{empty}
 \section*{Acknowledgements}
-Here I thank all the people!
+
+% Here I thank all the people!
+
+First and foremost, I would like to thank my supervisor, Dr. Sheridan Houghten for being the best mentor I could have asked for. Without her guidance and patience I would not have been able to achieve the success I have today. I would also like to thank my advisory committee Dr. Doug Bruce, Dr. Brian Ross, and Dr. Dan Ashlock.
+
+Special thanks goes to the Brock University Computer Science Department. Especially, Donna Phelps for her help navigating the paper work and Cale Fairchild for taking the time to ensure that my experiments ran smoothly and efficiently.
+
+I would like to show my appreciation for Sergey Vassiliev. He helped with the understanding of the biological background and was a vital asset in the success of this work.
+
+Finally, I would like to thank my friends and family, especially Gary and Cathie Price. They supported and motivated me during my research. Without their continuous support I would not be the person I am today.
+
 \begin{flushright}
 \textbf{C.P.} %Your initials
 \end{flushright}
