--- a/doc/thesis/analysis/post-op.tex
+++ b/doc/thesis/analysis/post-op.tex
@@ -1,7 +1,7 @@
 \section{Genetic Algorithm: Post-Optimization}
 \label{sec:post-op-analysis}
 
-Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Each experiment in the results table was run 30 times. 
+Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Full results can be found in Appendix~\ref{appendix-summary}. The bolded values represent the experiments with the best fitness scores. Each experiment in the results table was run 30 times. 
 
 \begin{table}
 	\centering
@@ -56,4 +56,4 @@ In contrast, the results from the PSO experiments were very successful. Using th
 	\label{fig:post-op-pso-best-exafs}
 \end{figure*}
 
-Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets and the results from the RGA experiment sets in Section~\ref{sec:ga-analysis}. The results of the PSO experiments were statistically better than the results of the DE experiments. The improved results found using the reduced \textit{initial movement radius} were statistically consistent. Comparing the PSO experiment results with the RGA experiment results showed that the PSO performed statistically better than the RGA. It is worth noting that although the DE experiments could not improve upon the seed candidate solution the results of the DE compared to the RGA were statistically better.
+Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets and the results from the RGA experiment sets in Section~\ref{sec:ga-analysis} using a confidence interval of 95\%. The results of the PSO experiments were statistically better than the results of the DE experiments. The improved results found using the reduced \textit{initial movement radius} were statistically consistent. Comparing the PSO experiment results with the RGA experiment results showed that the PSO performed statistically better than the RGA. It is worth noting that although the DE experiments could not improve upon the seed candidate solution the results of the DE compared to the RGA were statistically better.
