--- a/doc/thesis/analysis/subset.tex
+++ b/doc/thesis/analysis/subset.tex
@@ -2,11 +2,11 @@
 
 \subsection{Analysis}
 
-The results of the atom subset experiments revealed some interesting insights into the structure refinement of atomic structures. Figure~\ref{table:subset-results} contains a summary of the results from the atom subset experiments. The most significant result was that keeping the Hydrogen elements rigid actually had little effect on the final results. This is not surprising since the study in Subsection~\ref{subsec:mutation} already revealed that moving a Hydrogen element had very little impact on the fitness score.
+The results of the atom subset experiments revealed some interesting insights into the structure refinement of atomic structures. Figure~\ref{table:subset-results} contains a summary of the results from the atom subset experiments. The most significant result was that keeping the hydrogen elements rigid actually had little effect on the final results. This is not surprising since the study in Subsection~\ref{subsec:mutation} already revealed that moving a hydrogen element had very little impact on the fitness score.
 
-Knowing that the Hydrogen element has little impact on the results of atomic structure refinement means that it could be removed from the individuals. Removing the Hydrogen element would decrease the chromosome length from 79 to 51. The reduced chromosome length would allow for more different combinations to be attempted and reduced degrees of freedom.
+Knowing that the hydrogen element has little impact on the results of atomic structure refinement means that it could be removed from the individuals. Removing the hydrogen element would decrease the chromosome length from 79 to 51. The reduced chromosome length would allow for more different combinations to be attempted and reduced degrees of freedom.
 
-Since the Manganese (Mn), and Calcium (Ca) are at the core of the OEC molecule these chemical elements could not be left rigid during the experiments. Leaving any of the other chemical elements rigid during the experiments showed little improvement. Keeping the Carbon (C), Oxygen (O), or Nitrogen (N) elements rigid during the experiments either caused the RGA run to become stuck in an early local optium or created atomic structures that would become unable to perform the EXAFS calculations. The N/A's within Figure~\ref{table:subset-results} represent results that were unable to be calculated successfully. The populations of most of the runs were becoming polluted with invalid atomic configurations that could not produce EXAFS spectra.
+Since the manganese (Mn), and calcium (Ca) are at the core of the OEC molecule these chemical elements could not be left rigid during the experiments. Leaving any of the other chemical elements rigid during the experiments showed little improvement. Keeping the carbon (C), oxygen (O), or nitrogen (N) elements rigid during the experiments either caused the RGA run to become stuck in an early local optium or created atomic structures that would become unable to perform the EXAFS calculations. The N/A's within Figure~\ref{table:subset-results} represent results that were unable to be calculated successfully. The populations of most of the runs were becoming polluted with invalid atomic configurations that could not produce EXAFS spectra.
 
 In order to make the atomic structure refinement work using only a subset of the atoms would require the assistance of a molecular dynamics simulation such as NAMD~\cite{namd}. Once the candidate individuals were allowed to evolve for a few generations some corrections to their atomic structures would have to be made using the molecular dynamics simulation.
 
