--- a/doc/thesis/appendix/A.tex
+++ b/doc/thesis/appendix/A.tex
@@ -1,4 +1,5 @@
 \chapter{Summary of Results}
+\label{appendix-summary}
 
 \begin{table}
 	\centering
@@ -37,6 +38,7 @@
 		30 & 1.2920 & 1.3698 & 1.3462 & 1.3864 & 1.3653 & 1.2905 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for GA Experiments}
+	\label{table:appendix-ga}
 \end{table}
 
 \begin{table}
@@ -76,6 +78,7 @@
 		30 & 1.2996 & 1.2837 & 1.2801 & 1.2700 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for RGA Experiments}
+	\label{table:appendix-rga-1}
 \end{table}
 
 \begin{table}
@@ -115,6 +118,7 @@
 		30 & 1.1015 & 1.2206 & N/A & 1.1261 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for RGA Experiments}
+	\label{table:appendix-rga-2}
 \end{table}
 
 \begin{table}
@@ -154,6 +158,7 @@
 		30 & 1.1513 & N/A \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for Post-Optimized DE Experiments}
+	\label{table:appendix-post-de}
 \end{table}
 
 \begin{table}
@@ -193,6 +198,7 @@
 		30 & 0.8299 & 1.1649 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for Post-Optimized PSO Experiments}
+	\label{table:appendix-post-pso}
 \end{table}
 
 \begin{table}
@@ -232,6 +238,7 @@
 		30 & 1.1940 & 1.1176 & 1.1818 & 1.0252 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for DE Experiments}
+	\label{table:appendix-de}
 \end{table}
 
 \begin{table}
@@ -271,6 +278,7 @@
 		30 & 0.8423 & 0.9242 & 0.8145 & 0.9149 & 0.8186 & 0.7857 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for PSO Experiments}
+	\label{table:appendix-pso-1}
 \end{table}
 
 \begin{table}
@@ -310,4 +318,5 @@
 		30 & 0.9345 & 0.8313 & 0.9112 & 0.7535 & 0.7615 & 0.8331 \\ \hline
 	\end{tabular}
 	\caption{Best RMSD for PSO Experiments}
+	\label{table:appendix-pso-2}
 \end{table}
