--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -5,9 +5,7 @@ Before we can begin explaining the techniques we used in the next chapter, it is
 \section{Quantum Mechanics/Molecular Mechanics}
 \label{sec:prev-work}
 
-In previous work~\cite{sproviero2008model} the authors used density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM) and refined quantum mechanics/molecular mechanics (R-QM/MM) to find close approximations of the experimental EXAFS spectrum of OEC in S$_{1}$. The EXAFS spectrum used in their calculations was at a poorer resolution compared to the spectra used in the experiments in our work.
-
-DFT-QM/MM~\cite{parr1989density} uses the atoms' spatially dependent electron density to determine the position of each atom. Since DFT largely uses function approximations this approach is very limited.
+In previous work~\cite{sproviero2008model} the authors used density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM) and refined quantum mechanics/molecular mechanics (R-QM/MM) to find close approximations of the experimental EXAFS spectrum of OEC in S$_{1}$. The EXAFS spectrum used in their calculations was at a poorer resolution compared to the spectra used in the experiments in our work. DFT-QM/MM~\cite{parr1989density} uses the atoms' spatially dependent electron density to determine the position of each atom. Since DFT largely uses function approximations this approach is very limited.
 
 To increase their accuracy the researchers used R-QM/MM. This approach iteratively adjusted the molecular structure of the molecule and attempted to minimize a scoring function defined in terms of the sum of squared deviations between the experimental and calculated EXAFS spectra. A quadratic penalty was applied to each atom to ensure that the atoms' positions did not deviate too far from their original positions in order to keep the energy of the system at a minimum.
 
