--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -24,8 +24,9 @@
 @article{newville2004fundamentals,
 	title={Fundamentals of XAFS},
 	author={Newville, Matthew},
-	journal={Consortium for Advanced Radiation Sources, University of Chicago (USA)[http://xafs. org]},
-	year={2004}
+	journal={Consortium for Advanced Radiation Sources, University of Chicago (USA)[http://xafs.org]},
+	year={2004},
+	note={http://xafs.org/Tutorials?action=AttachFile{\&}do=get{\&}target= Newville\_xas\_fundamentals.pdf},
 }
 
 % previous work
@@ -138,9 +139,10 @@
 
 % problem definition
 
-@electronic{ifeffit,
+@misc{ifeffit,
 	title={IFEFFIT: Interactive XAFS Analysis},
 	url={http://cars9.uchicago.edu/ifeffit/Ifeffit},
+	howpublished="\url{http://cars9.uchicago.edu/ifeffit/Ifeffit}",
 	author={The University of Chicago},
 	note={Accessed: 2014-04-01}
 }
@@ -148,6 +150,7 @@
 @electronic{namd,
 	title={NAMD - Scalable Molecular Dynamics},
 	url={http://www.ks.uiuc.edu/Research/namd/},
+	howpublished="\url{http://www.ks.uiuc.edu/Research/namd/}",
 	author={Theoretical and Computational Biophysics Group},
 	note={Accessed: 2014-04-01}
 }
@@ -155,6 +158,15 @@
 @electronic{namdEnergy,
 	title={NAMD Energy Plugin},
 	url={http://www.ks.uiuc.edu/Research/vmd/plugins/namdenergy/},
+	howpublished="\url{http://www.ks.uiuc.edu/Research/vmd/plugins/namdenergy/}",
+	author={Theoretical and Computational Biophysics Group},
+	note={Accessed: 2014-04-01}
+}
+
+@electronic{vmd,
+	title={VMD - Visual Molecular Dynamics},
+	url={http://www.ks.uiuc.edu/Research/vmd/},
+	howpublished="\url{http://www.ks.uiuc.edu/Research/vmd/}",
 	author={Theoretical and Computational Biophysics Group},
 	note={Accessed: 2014-04-01}
 }
@@ -213,7 +225,9 @@
 	title={Good parameters for differential evolution},
 	author={Pedersen, Magnus Erik Hvass},
 	journal={Magnus Erik Hvass Pedersen},
-	year={2010}
+	year={2010},
+	url={http://www.hvass-labs.org/people/magnus/publications/pedersen10good-de.pdf},
+	howpublished="\url{http://www.hvass-labs.org/people/magnus/publications/pedersen10good-de.pdf}",
 }
 
 % PSO
@@ -264,7 +278,10 @@
 @electronic{databank,
 	title={Crystal structure of oxygen-evolving Photosystem II at 1.9 angstrom resolution},
 	url={http://www.rcsb.org/pdb/explore/explore.do?structureId=3arc},
-	organization={PDB Protein Data Bank}
+	howpublished="\url{http://www.rcsb.org/pdb/explore/explore.do?structureId=3arc}",
+	organization={PDB Protein Data Bank},
+	author={Umena, Kawakami and Shen, Kamiya},
+	year={2011}
 }
 
 @article{mcknight2010mann,
