--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -19,6 +19,7 @@
 \usepackage{graphicx}
 \usepackage{tabu}
 \usepackage{color}
+\usepackage{url}
 %feel free to add here
 
 \usepackage[top=1.0in, bottom=1.0in, left=1.5in, right=1.0in]{geometry} %set page margins
