--- a/doc/thesis/experimental-design.tex
+++ b/doc/thesis/experimental-design.tex
@@ -1,6 +1,6 @@
 \chapter{Experimental Design}
 
-This chapter contains the design details of each experiment. Each experiment includes the purpose of running the experiment and the system parameters used during the experiment.
+This chapter contains the design details of each experiment. For each experiment, the system parameters and experimental setup are discussed.
 
 \input{experimental-design/ga.tex}
 \input{experimental-design/post-op.tex}
