--- a/doc/thesis/experimental-design/ea.tex
+++ b/doc/thesis/experimental-design/ea.tex
@@ -16,7 +16,7 @@ Representation 1 (See Subsection~\ref{subsec:encoding-1}) was chosen as the indi
 
 The \textit{velocity parameter} found in Table~\ref{table:ea-pso} represents the random range that was used to generate the initial \textit{velocity vector} of each particle in the PSO. For example, a \textit{velocity parameter} of 0.01 means that each velocity vector was generated using random values between -0.01 and 0.01.
 
-The DE, and PSO experiments were initially run using a variety of different tuning parameters. The PSO algorithm has three tunable user defined parameters: \textit{inertia}, \textit{social} and \textit{cognitive}. Based on the work performed by Eberhart, and Shi~\cite{eberhart2000comparing}, the \textit{social} and \textit{cognitive} parameters were set to 1.496180 and \textit{inertia} was set to 0.729844. The DE algorithm has two tunable user defined parameters: \textit{differential weight}, and \textit{crossover probability}. Several different combinations of values for \textit{differential weight}, and \textit{crossover probability} were used but the parameters that produced the best results were from a research paper by Hvass Laboratories~\cite{pedersen2010good}. \textit{Differential weight} was set to 0.4717, and \textit{crossover probability} was set to 0.8803.
+The DE, and PSO experiments were initially run using a variety of different tuning parameters. The PSO algorithm has three tunable user defined parameters: \textit{inertia}, \textit{social} and \textit{cognitive}. The values used in this experiment were selected based on the work performed by Eberhart, and Shi~\cite{eberhart2000comparing} and are shown in Table~\ref{table:ea-pso-algo}. The DE algorithm has two tunable user defined parameters: \textit{differential weight}, and \textit{crossover probability}. Several different combinations of values for \textit{differential weight}, and \textit{crossover probability} were used but the parameters that produced the best results were from a research paper by Hvass Laboratories~\cite{pedersen2010good} and are shown in Table~\ref{table:ea-de-algo}.
 
 \begin{table}
 	\centering
