--- a/doc/thesis/methodology/genetic-operators.tex
+++ b/doc/thesis/methodology/genetic-operators.tex
@@ -1,6 +1,18 @@
 \section{Genetic Operators}
 \label{sec:ga-operators}
 
+\begin{table}
+	\centering
+	\begin{tabular}{ | l | l | }
+		\hline
+		Crossover & One-point \\ \hline
+		Mutation & 0.05 \\ \hline
+		Tourament Size & 3 \\ \hline
+	\end{tabular}
+	\caption{GA Operators}
+	\label{table:ga-operators}
+\end{table}
+
 \subsection{Crossover}
 
 The basic one-point crossover operator was chosen for the experiments, as described in Subsection~\ref{subsec:ga-operators}. One point crossover is generally less destructive to the individuals than other forms of crossover. %Other crossover operators that caused greater exploitation of the individuals had a negative affect on the overall fitness score. A crossover operator that causes minimal disruption to the individual was able to find better candidate solutions.
